New message bundle for help text

--- a/src/as/com/threerings/msoy/client/world.mxml
+++ b/src/as/com/threerings/msoy/client/world.mxml
@@ -21,6 +21,7 @@
     [ResourceBundle("party")]
     [ResourceBundle("studio")]
     [ResourceBundle("homepagegrid")]
+    [ResourceBundle("help")]
 </mx:Metadata>
 <mx:Script>
     <![CDATA[
