* Added a description field to MedalRecord * Added a bunch of missed file headers from new source files committed yesterday * Created the medal creation/edit interface. * This required an update to ImageChooserPopup.  The new nifty image upload and editing deal that   Ray made that uses flash is married to the Item stuff, so I was unable to use it (without a rabbit   hole of doom).  Instead I decided to use ImageChooserPopup, but in the default case it only   reports the MediaDesc to the caller.  In this case I need to restrict the image to exactly 80x60   (because these are basically dynamic stamps), so I modified ImageChooserPopup to allow the caller   to specify an exact width and height that the chosen image needs to be. * Created the Medal class that will be used for communicating medals between client and server.  In   the case of displaying medals on a player's profile, only the pertinant fields will be included   in the profile data: media desc, name, type and date awarded, most likely. I haven't decided yet   how I'm going to deal with Medals on the Passport page (client.me)... maybe me will have its own   Medal class.

--- a/src/gwt/public/groups/groups.css
+++ b/src/gwt/public/groups/groups.css
@@ -742,3 +742,15 @@
   float: right;
   width: 75px;
 }
+
+/* ------------------------------------
+   EDIT MEDAL PANEL
+-------------------------------------*/
+
+.editMedalPanel {
+  width: 505px;
+}
+
+.editMedalPanel .nowrapLabel {
+  font-size: 16px;
+}
