Having now received the mockup, I discover that the medal list is going to live on its own page, not sit in the content area of the group detail page.  While I was shuffling that stuff around, I created an enum for GroupsPage navigation because all of the magic strings floating around were irritating me.  I didn't find all of the magic string usage, but I did clean up some of it.
Can we just nix the whole Issues system?  The magic stringage would have been much less of a big 
deal if all of the Issues-related stuff weren't there, and we haven't touched that stuff in ages.

--- a/src/gwt/public/groups/groups.css
+++ b/src/gwt/public/groups/groups.css
@@ -57,7 +57,15 @@
 }
 
 .groupDetail .MainDetails .EnterButton {
-    margin: 0 10px 0 45px;
+    margin: 0 6px 0 10px;
+}
+
+.groupDetail .MainDetails .DiscussionsButton {
+    margin: 0 6px 0 0;
+}
+
+.groupDetail .MainDetails .MedalsButton {
+    margin: 0 10px 0 0;
 }
 
 .groupDetail .MainDetails .Actions {
