Added ability for admins to view status of the Panopticon client on the world server.

--- a/src/gwt/public/adminz/adminz.css
+++ b/src/gwt/public/adminz/adminz.css
@@ -307,3 +307,11 @@
 .statsPanel .Controls div, .statsPanel .Controls select {
   margin-right: 5px;
 }
+
+.panopticonStatus {
+  font-size: 10pt;
+}
+
+.panopticonStatus .header {
+  font-weight: bold;
+}
