Refactored the way that item flags are stored in preparation to allow usrs to enter comments when flagging items * New repo and record for a single incident of flagging * New user interface for support to view all flags (no collapsing of multiple flags on the same item) * Migrate flagged column in old items to a row in a the new table * Split up the TagDetailPanel interface into 2 rather than have supportTags and setTag

--- a/src/gwt/public/adminz/adminz.css
+++ b/src/gwt/public/adminz/adminz.css
@@ -44,12 +44,12 @@
   padding-top: 10px;
 }
 
-/*** Item transactions review ***/
-.itemTransactions .Table .row1 {
+/*** Item transactions and review panel tables ***/
+.itemTransactions .Table .row1, .reviewPanel .Table .row1 {
   background: #dbeffc;
 }
 
-.itemTransactions .Table .header {
+.itemTransactions .Table .header, .reviewPanel .Table .header {
   background: #ff992b;
   color: white;
   text-align: center;
@@ -58,7 +58,8 @@
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 
-.itemTransactions .Table .col2 { /* Description */
+.itemTransactions .Table .col2 /* Description */,
+.reviewPanel .Table .col2 /* Comment */ { 
   width: 50%;
 }
 
