--- a/src/gwt/public/groups/groups.css
+++ b/src/gwt/public/groups/groups.css
@@ -757,6 +757,54 @@
 }
 
 /* ------------------------------------
+   MEDAL LIST PANEL
+-------------------------------------*/
+
+.medalListPanel {
+  background: #61ABD0 url(/images/whirled/bg_gradient_long_blue.png) repeat-x;
+  width: 100%;
+  min-height: 100%;
+}
+
+.medalListPanel, .medalListPanel table {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+}
+
+.medalListPanel .Header {
+  width: 100%;
+  height: 100px;
+}
+
+.medalListPanel .Header .Intro {
+  color: #c1e1f2;
+  width: 280px;
+}
+
+.medalListPanel .MedalTitle {
+  background: url(/images/me/contests_dots_bg.png) repeat-x left bottom;
+  padding-bottom: 3px;
+  margin-bottom: 10px;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  color: #114E73;
+  width: 100%;
+}
+
+.medalListPanel .MedalTitle .AddMedal {
+  font-size: 14px;
+  padding-top: 2px;
+  text-align: right;
+}
+
+.medalListPanel .MedalList {
+  margin: 5px 15px;
+  width: 646px;
+}
+
+
+/* ------------------------------------
    EDIT MEDAL PANEL
 -------------------------------------*/
 
