Allow reboots to be scheduled (and cancelled) via GWT so that we don't have to rely on the admin panel which is fiddly.

--- a/src/gwt/public/adminz/adminz.css
+++ b/src/gwt/public/adminz/adminz.css
@@ -18,6 +18,11 @@
   text-align: left;
 }
 
+.dashboardPanel .gwt-Button {
+  display: block;
+  margin-bottom: 5px;
+}
+
 .invitePlayersPopup {
   padding: 10px;
 }
