--- a/src/gwt/public/account/account.css
+++ b/src/gwt/public/account/account.css
@@ -126,21 +126,19 @@
 -------------------------------------*/
 
 .logonPagePanel {
-  background: url(/images/ui/gradient_dark_bg.png) repeat-x top #3283aa;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
-  width: 100%;
-  height: 100%;
-  min-height: 520px;
+  padding: 0px 10px 10px 20px;
 }
 
-.logonPagePanel,
-.logonPagePanel a {
-  color: #d0e6f7;
+.logonPagePanel .Header {
+  font-size: 18px;
+  font-weight: bold;
+  padding: 20px 0px 15px;
 }
 
-.logonPagePanel .logonPanel {
-  margin: 25px 0 10px 25px;
+.logonPagePanel .Button {
+  margin: 0px 15px 15px 85px;
 }
 
 .logonPagePanel .rightLabel {
@@ -156,10 +154,6 @@
   font-size: 14px;
   color: #1D5884;
   border: solid #5c5d61 1px;
-}
-
-.logonPagePanel .LogonButton {
-  margin-left: 200px;
 }
 
 /* ------------------------------------
