--- a/src/gwt/public/groups/groups.css
+++ b/src/gwt/public/groups/groups.css
@@ -803,6 +803,48 @@
   width: 646px;
 }
 
+.medalListPanel .MedalOwnerWidget {
+  background-color: white;
+}
+
+.medalListPanel .MedalOwnerWidget .OwnerWidgets {
+  width: 100%;
+}
+
+.medalListPanel .MedalOwnerWidget .OwnerWidgets .OwnerWidget {
+  display: inline;
+  text-align: center;
+}
+
+.medalListPanel .MedalOwnerWidget .MedalWidget {
+  border: solid 1px #C9E9FE;
+  position: relative;
+}
+
+.medalListPanel .MedalOwnerWidget .MedalWidget .Icon {
+  position: absolute;
+  left: 5px;
+  top: 5px;
+}
+
+.medalListPanel .MedalOwnerWidget .MedalWidget .Name {
+  position: absolute;
+  left: 25px;
+  top: 5px;
+  width: 100px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.medalListPanel .MedalOwnerWidget .MedalWidget .Description {
+  position: absolute;
+  left: 25px;
+  top: 20px;
+  width: 100px;
+  text-align: center;
+  font-size: 14px;
+}
 
 /* ------------------------------------
    EDIT MEDAL PANEL
