There's the thing I was forgetting.

--- a/src/gwt/public/groups/groups.css
+++ b/src/gwt/public/groups/groups.css
@@ -815,6 +815,7 @@
 .medalListPanel .MedalOwnerWidget .OwnerWidgets .OwnerWidget {
   text-align: center;
   width: 120px;
+  float: left;
 }
 
 .medalListPanel .MedalOwnerWidget .MedalWidget {
