--- a/src/gwt/public/groups/groups.css
+++ b/src/gwt/public/groups/groups.css
@@ -853,6 +853,13 @@
   color: #1f4e78;
 }
 
+.medalListPanel .MedalOwnerWidget .MedalWidget .Edit {
+  font-size: 12px;
+  top: 70px;
+  left: 5px;
+  position: absolute;
+}
+
 /* ------------------------------------
    EDIT MEDAL PANEL
 -------------------------------------*/
