Decent UI for comment ratings. Going to pad the thumbs out a bit, then see if I can slim down the comments in general + display more of them per page.

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -891,6 +891,11 @@ img, embed, applet, object {
   padding-top: 5px;
 }
 
+.messagePanel .Tools {
+  padding-top: 5px;
+  text-align: right;
+}
+
 .messagePanel .Author {
   font-weight: bold;
   font-size: 12px;
