Navigational elements for displaying stamps and medals.  Actual medal display coming next.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -280,6 +280,21 @@
   font-style: italic;
 }
 
+.passport .SectionLinks {
+  color: white;
+  height: 19px;
+  width: 670px;
+  text-align: right;
+  font-size: 12px;
+  position: relative;
+  padding-top: 12px;
+}
+
+.passport .SectionLink {
+  display: inline;
+  margin-top: 20px;
+}
+
 /* ------------------------------------
    BADGE DISPLAYS ANYWHERE
 -------------------------------------*/
