We designed Medals to fit within the Stamp UI, but while we had precise control over the words used in Stamp names, we have no such control over Medals, and some words are quite long.  Therefore the Medal UI needs to be wider than the Stamp UI on the Passport page.  Here are some adjustments to make the Medals show three per row instead of four.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -295,6 +295,18 @@
   margin-top: 20px;
 }
 
+.passport .MedalDisplay {
+  width: 211px;
+}
+
+.passport .MedalDisplay .AwardName {
+  width: 109px;
+}
+
+.passport .MedalDisplay .AwardDescription, .passport .MedalDisplay .WhenEarned {
+  width: 196px;
+}
+
 /* ------------------------------------
    BADGE DISPLAYS ANYWHERE
 -------------------------------------*/
@@ -380,7 +392,7 @@
   right: 7px;
 }
 
-.BoxedBadge {
+.BoxedAward {
   border-color: #d6e8f6;
   border-style: solid;
   border-width: 1px;
