Holy hackery Batman, it's Facebook Connect integration. There are some annoying wrinkles still to be ironed out, and we don't post anything to a user's Facebook feed yet but we do:
- automatically create an account for a Facebook user with one click
- slurp in their first+last name, birthday, location to set up their display
  name and basic profile
- slurp in their friends list from Facebook and autofriend htem with all
  friends that are also Facebook Connect users (or who have used the
  forthcoming "Connect your Whirled account to your Facebook Account" button)

--- a/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
+++ b/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
@@ -34,4 +34,7 @@ public class DeploymentConfig
     
     /** The URL to reach billing. */
     public static final String billingURL = "@billing_url@";
+    
+    /** Our Facebook API key. */
+    public static final String facebookKey = "@facebook_api_key@";
 }
