Made the background of the account creation UI stretch to fit whatever contents in contains. This looks like ass on the Mac because the Mac apparently just doesn't display the color you tell it to, it displays some other color that it thinks would be better. In some places in our UI, you can see that the corners of our rounded boxes don't match up with the background of the solid spaces. In this particular UI the effect is quite pronounced. All I have to say on the topic is What the Fuck?

--- a/src/gwt/public/account/account.css
+++ b/src/gwt/public/account/account.css
@@ -21,10 +21,9 @@
 }
 
 .createAccount .Content {
+  background: url(/images/account/create_bg_mid.png) #287099 no-repeat bottom;
   margin: 0 auto;
-  background: url(/images/account/create_bg.png) no-repeat;
   width: 657px;
-  height: 508px;
 }
 
 .createAccount .logonPanel {
