Implemented party detail requests. These aren't modal, so I restrict you to one request for detail per party at a time, and track the detail dialogs that open and ensure that only one is up for each party. If you join a party, all open detail dialogs are closed.

--- a/rsrc/css/msoy.css
+++ b/rsrc/css/msoy.css
@@ -1316,7 +1316,7 @@ GameOverPanel {
   color: #519cdd;
 }
 
-FriendsListPanel, PartyPanel, PartyBoardPanel {
+FriendsListPanel, PartyPanel, PartyBoardPanel, PartyDetailPanel {
   paddingTop: 0;
   paddingBottom: 0;
   paddingLeft: 0;
