Big fat bernie revamp of the way we handle Facebook Connect. Now everything is confined to the ACCOUNT page and we don't keep an FBConnect session live in the outer frame.
We may end up adding FB Connect back out there, but I want to see what I can do
with the server-side FB API since it's probably going to be a jillion times
simpler to publish stories from the server than to send all the necessary info
down to the client where the Flash client will have to send the data to GWT or
talk to FB Connect directly, both of which are a PITA.

Also moved the EditAccountPanel back into the ACCOUNT section. I don't know why
I moved it into the ME page a while back. Perhaps I was gripped with fever. The
commit message did says something about the little green people and their
peculiar demands...

--- a/src/gwt/public/account/account.css
+++ b/src/gwt/public/account/account.css
@@ -107,6 +107,45 @@
 }
 
 /* ------------------------------------
+   EDIT ACCOUNT
+-------------------------------------*/
+
+.editAccount .Header {
+  font-weight: bold;
+}
+
+.editAccount .rightLabel {
+  width: 140px;
+}
+
+.editAccount .Tip {
+  width: 400px;
+  font-size: 12px;
+  text-align: center;
+}
+
+.editAccount .Info {
+  font-size: 14px;
+}
+
+.editAccount .FBLink img {
+  margin: 0;
+}
+
+.editAccount .PermaName {
+  font-weight: bold;
+}
+
+.editAccount .charityList {
+  width: 300px;
+}
+
+.editAccount .charityDescription {
+  width: 400px;
+  font-size: 12px;
+}
+
+/* ------------------------------------
    LOGON PAGE
 -------------------------------------*/
 
