--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -379,6 +379,12 @@
   color: #4a7595;
 }
 
+.awardDisplay .Delete {
+  position: absolute;
+  top: 120px;
+  left: 120px;
+}
+
 /* ------------------------------------
    MONEY / TRANSACTIONS
 -------------------------------------*/
