--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -381,8 +381,22 @@
 
 .awardDisplay .Delete {
   position: absolute;
-  top: 120px;
-  left: 120px;
+  top: 46px;
+  left: 90px;
+  width: 109px;
+  text-align: center;
+  font-size: 12px;
+}
+
+.deleteConfirmation {
+  margin-left: 30px;
+  margin-right: 30px;
+  text-align: center;
+  background-color: white;
+}
+
+.deleteConfirmation .ButtonPair {
+  display: inline;
 }
 
 /* ------------------------------------
