--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -399,6 +399,10 @@
   display: inline;
 }
 
+.deleteConfirmation .Inner {
+  padding: 10px;
+}
+
 /* ------------------------------------
    MONEY / TRANSACTIONS
 -------------------------------------*/
