--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -268,6 +268,12 @@
   margin-top: 20px;
 }
 
+.passport .Instructions {
+  display: inline;
+  float: left;
+  padding-left: 10px;
+}
+
 .passport .MedalDisplay {
   width: 211px;
 }
