* Let TongueBox accept a ClickListener that fires when the "tongue" is clicked. * Use this to link the group names on the passport medal page to their group detail pages.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -286,6 +286,10 @@
   width: 196px;
 }
 
+.passport .MedalContents .tongueBox .THeader .Base {
+  cursor: pointer;
+}
+
 /* ------------------------------------
    BADGE DISPLAYS ANYWHERE
 -------------------------------------*/
