Move the group name to the top of the medals list, and link it to the group detail page.

--- a/src/gwt/public/groups/groups.css
+++ b/src/gwt/public/groups/groups.css
@@ -802,6 +802,10 @@
   text-align: right;
 }
 
+.medalListPanel .GroupName {
+  text-decoration: none;
+}
+
 .medalListPanel .MedalList {
   margin: 5px 15px;
   width: 646px;
