Now shows the mini now loading widget while loading a page in the Groups page.  This is something we can easily extend to any other page that uses PagedGrids or PagedWidgets.

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -1192,3 +1192,9 @@ img, embed, applet, object {
   font-size: 18pt;
   font-weight: bold;
 }
+
+.miniNowLoadingWidget {
+  width: 60px;
+  height: 15px;
+  background-image: url(/images/ui/dot_loader.gif);
+}
