Highlight highly rated comments with a pleasant green colour.

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -893,6 +893,10 @@ img, embed, applet, object {
   font-size: 12px;
 }
 
+.CommentsPanel .emphasized .Scroller {
+  color: green;
+}
+
 .CommentsPanel .messagePanel .MsgInfo {
   padding-top: 1px;
 }
