Some tidying up and linkification.

--- a/rsrc/email/postcard.tmpl
+++ b/rsrc/email/postcard.tmpl
@@ -1,10 +1,14 @@
 Whirled Postcard: ${subject}
 You got a Whirled Postcard from ${sender}!
 
+${title}
+
 ${snap_url}
 #if (${caption})
 
 "${caption}"
 #end
+
+You can visit this room at http://www.whirled.com/#world-s${scene_id}
 
 This email was sent by ${sender_email} from http://whirled.com/
