Screw the vertical centering. Let's just put the home icon where the loading icon will be when you click it which is visually nicer anyway.

--- a/src/gwt/public/frame/frame.css
+++ b/src/gwt/public/frame/frame.css
@@ -125,6 +125,7 @@
   text-align: center;
   vertical-align: middle;
   color: #999999;
+  padding-top: 200px;
 }
 
 /* ------------------------------------
