Switched the hover image to a PNG so that it antialiases nicely. Changed text to just "Your Home". Revamped layout so that the hover area is not the entire horizontal space but just the image and the text (oh how I wish HTML didn't try to jam text layout and GUI structural layout into the same conceptual model).

--- a/src/gwt/public/frame/frame.css
+++ b/src/gwt/public/frame/frame.css
@@ -120,12 +120,16 @@
   padding-left: 5px;
 }
 
-/** No client home icon */
+/** Home icon shown when we have no client */
 .noclient {
-  text-align: center;
-  vertical-align: middle;
-  color: #999999;
   padding-top: 200px;
+}
+
+.noclient .Bits {
+  display: table;
+  margin: auto;
+  text-align: center;
+  color: #999999;
 }
 
 /* ------------------------------------
