Give all games a game menu, not just AVRGs. This allows us to nix the instructions button, and we can put rematch and play again in here, to simplify simplify simplify!
Still need to change the icon to be the game's icon for non-AVR games.

--- a/rsrc/css/msoy.css
+++ b/rsrc/css/msoy.css
@@ -540,7 +540,7 @@ TabNavigator, TabBar {
 .controlBarButtonChat, .controlBarButtonEdit, .controlBarButtonZoom, .controlBarButtonComment,
 .controlBarButtonInstructions, .controlBarButtonShare, .controlBarButtonScores,
 .controlBarHoverZone, .controlBarButtonSnapshot, .controlBarFriendButton, .controlBarTalkButton,
-.controlBarIdleButton, .controlBarScaleButton, .controlBarAVRGButton, .tickButton,
+.controlBarIdleButton, .controlBarScaleButton, .controlBarGameButton, .tickButton,
 .controlBarButtonVolume0, .controlBarButtonVolume1, .controlBarButtonVolume2,
 .controlBarButtonVolume3, .controlBarButtonVolume4, .controlBarHomePageGridButton,
 .controlBarButtonMusic, .controlBarPartyButton,
@@ -632,7 +632,7 @@ TabNavigator, TabBar {
   image: Embed(source="../media/skins/controlbar/scale.png");
 }
 
-.controlBarAVRGButton {
+.controlBarGameButton {
   image: Embed(source="../media/skins/controlbar/instructions.png");
 }
 
