In-Flash trophy display. Forthcoming: a way to show this via GameControl so that games can pimp their own trophies.

--- a/rsrc/css/msoy.css
+++ b/rsrc/css/msoy.css
@@ -1380,3 +1380,17 @@ Roster {
 Stars {
   horizontalGap: 0;
 }
+
+.trophyPanelTitle {
+  fontSize: 16;
+  fontWeight: bold;
+}
+
+.trophyPanelName {
+  fontSize: 14;
+  fontWeight: bold;
+}
+
+.trophyPanelHidden {
+  fontStyle: italic;
+}
