- Added a wee header to the party board with some explanatory text.   - minus a link to move info, right now, because I'm tired of     slamming my dick in a door trying to get it to behave. - Show a "no parties" label when you get back an empty board.

--- a/rsrc/css/msoy.css
+++ b/rsrc/css/msoy.css
@@ -521,6 +521,16 @@ TabNavigator, TabBar {
   backgroundAlphaOpen: .85;
 }
 
+/* Normally our floating panels have 10px of border, but if they don't you might
+   want to set _buttonBar.styleName = "buttonPadding"; */
+.buttonPadding {
+  paddingBottom: 10;
+  paddingTop: 10;
+  paddingLeft: 10;
+  paddingRight: 10;
+  horizontalAlign: "right";
+}
+
 .currencyLabel {
   color: white;
   fontSize: 12;
