--- a/rsrc/css/msoy.css
+++ b/rsrc/css/msoy.css
@@ -392,7 +392,7 @@ TabNavigator, TabBar {
   selectedTabTextStyleName: "selectedMsoyTabButton";
 }
 
-.shareLink {
+.underLink {
   color: white;
   textDecoration: underline;
 }
