Small improvement to the main shop page: add search & link to creator portal.

--- a/src/gwt/public/shop/shop.css
+++ b/src/gwt/public/shop/shop.css
@@ -6,8 +6,10 @@
 
 .shopPanel, .catalogPanel {
   width: 100%;
-  height: 100%;
-  background: #1D5884 url(/images/shop/background.png) repeat-x;
+  min-height: 100%;
+  background: #61abd0 url(/images/whirled/bg_gradient_long_blue.png) repeat-x;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
 }
 
 .listingGrid {
@@ -16,19 +18,52 @@
   margin-top: 5px;
 }
 
-.shopPanel .TopContents {
-  width: 565px;
+.shopPanel .ShopTitle {
+  background: url(/images/whirled/orange_header.png) no-repeat;
+  width: 233px;
+  height: 38px; /* 41 - padding */
+  margin-left: 7px;
+  color: #FFFFFF;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-size: 26px;
+  text-align: center;
+  padding-top: 3px;
+  margin-bottom: 10px;
 }
 
-.shopPanel .Bag {
-  padding: 0px 30px;
+.shopPanel .Search {
+  position: absolute;
+  top: 10px;
+  left: 265px;
+  background: url(/images/stuff/search_bg.png) no-repeat;
+  width: 411px;
+  height: 31px;
+}
+
+.shopPanel .Search .SearchTitle {
+  color: #b8daf0;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 5px;
+}
+
+.shopPanel .Search select,
+.shopPanel .Search input {
+  font-size: 13px;
 }
 
 .shopPanel .Intro {
   color: #9FB2C0;
   font-size: 14px;
-  text-align: right;
-  padding-top: 5px;
+  margin: 0 30px 10px 30px;
+}
+
+.shopPanel .Intro a {
+  color: #9FB2C0;
+}
+
+.shopPanel .TopContents {
+  width: 565px;
 }
 
 .shopPanel .roundBox {
